# tuido

./: .gitignore  AGENTS.md  Cargo.toml  architecture.md
migrations/: 0001_init.sql
src/: app.rs  app_keymap.rs  create_task_dialog.rs  domain.rs  lib.rs  main.rs  persistence_coordinator.rs  storage.rs
src/ui/: mod.rs  save_status.rs
src/ui/management/: common.rs  mod.rs  people.rs  projects.rs  tags.rs
workbench/trusted-lead-triage/: proposal.md  spec.md
