[package]
name = "tuido"
version = "0.1.0"
edition = "2024"
default-run = "tuido"

[dependencies]
tuicore = { path = "../tuicore" }
ratatui = "0.30"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls", "any", "sqlite", "postgres", "migrate", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
